2010-04-05 Sancho Lerena  <slerena@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Trying to fix the problem
	detected with recon and new modules from a network template.

	* lib/PandoraFMS/Core.pm: Fallback to previous version, this fix
	makes Pandora server to generate events constantly.

	Ported bugfix from trunk by Junichi Satoh:

	*  lib/PandoraFMS/Core.pm: Fixed the problem that agent status(estado)
	is never updated to $new_status if initial state of new agent is
	"estado != last_status" with "$new_status == last_status".
	eg) When new agents are added by recontask, estado=1 and last_status=0
	are set.

2010-03-10  Sancho Lerena <slerena@artica.es>

	Ported from trunk:

	* lib/PandoraFMS/Core.pm: Set tagente_estado.current_interval
	to tagente.intervalo if tagente_modulo.module_interval is 0.

2010-03-04  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Config.pm: Fixed small typhografic error.

2010-02-27  Sancho Lerena <slerena@artica.es>

	* util/tentacle_serverd,
	util/pandora_server: Fixed "stop" problem in debian/ubuntu, which was
	due a problem in redefinition of several LSB functions, stop function 
	was not working fine and exit condition was ignored.

2010-02-23  Raul Mateos  <raulofpandora@gmail.com>

	* lib/PandoraFMS/Config.pm: Fixed date.

	* DEBIAN/make_deb_package.sh, pandora_server_installer: Updated build.

2010-02-22  Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/DataServer.pm: Fixed bug #2926077 using code
	from previous comit in trunk

2010-02-19  Sancho Lerena <slerena@artica.es>

	* pandora_server.spec: Updated revision.
	
	* lib/PandoraFMS/Config.pm: Updated build.

	* lib/PandoraFMS/Core.pm: Fixed problem due the merge with 3.1 repo.

2010-02-19  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server/lib/PandoraFMS/Core.pm: Enabled FF protection for
	  module status (not just events). Needs testing.

2010-02-10  Sancho Lerena <slerena@artica.es>
